Project

General

Profile

Actions

Bug #9971

closed

potential stack overflow check deadlock (fixed at r46495)

Bug #9971: potential stack overflow check deadlock (fixed at r46495)

Added by nagachika (Tomoyuki Chikanaga) over 12 years ago. Updated about 12 years ago.

Status:
Closed
Target version:
-
ruby -v:
-
[ruby-dev:48312]

Description

r46495 で check_stack_overflow() 内で GET_THREAD() を呼ぶのをやめるようにしていますが、2.0.0 と 2.1 でも GET_THREAD() は関数として定義されているのでバックポートが必要と思います。
このチケットはバックポート管理用に作成しました。

Actions

Also available in: PDF Atom