signal.c: drop dangerous tag

* signal.c (check_stack_overflow): drop the last tag too close to
  the fault page, to get rid of stack overflow deadlock.
  [Bug #9971]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46499 b2dd03c8-39d4-4d8f-98ff-823fe69b080e